5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4327/executions/1643_2445.log
== TEST (2019-04-14 14:35:11) 
-- CODE:
escala=input("digite qual escala de convecao(c=celsius ou f=farenheit):  ")
temp==input(float("digite o valor da temperatura:"))

if(escala.upper()=="C")
	F=((temp*9/)5)+32
	print (F)
else:
	C=9/5*(temp-32)
	print (C)
-- ERROR:
File "XXXX", line 4
    if(escala.upper()=="C")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 14:35:53) 
-- CODE:
escala=input("digite qual escala de convecao(c=celsius ou f=farenheit):  ")
temp==input(float("digite o valor da temperatura:"))

if(escala.upper()=="C"):
	F=((temp*9/)5)+32
	print (F)
else:
	C=9/5*(temp-32)
	print (C)
-- ERROR:
File "XXXX", line 5
    F=((temp*9/)5)+32
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 14:35:59) 
-- CODE:
escala=input("digite qual escala de convecao(c=celsius ou f=farenheit):  ")
temp==input(float("digite o valor da temperatura:"))

if(escala.upper()=="C"):
	F=((temp*9/)5)+32
	print (F)
else:
	C=9/5*(temp-32)
	print (C)
-- ERROR:
File "XXXX", line 5
    F=((temp*9/)5)+32
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 14:36:51) 
-- CODE:
escala=input("digite qual escala de convecao(c=celsius ou f=farenheit):  ")
temp==input(float("digite o valor da temperatura:"))

if(escala.upper()=="C"):
	f=((temp*9)/5)+32
	print (f)
else:
	c=9/5*(temp-32)
	print (c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    temp==input(float("digite o valor da temperatura:"))
NameError: name 'temp' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 14:37:15) 
-- CODE:
escala=input("digite qual escala de convecao(c=celsius ou f=farenheit):  ")
temp==input(float("digite o valor da temperatura:"))

if(escala.upper()=="C"):
	f=((temp*9)/5)+32
	print (f)
else:
	c=9/5*(temp-32)
	print (c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    temp==input(float("digite o valor da temperatura:"))
NameError: name 'temp' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:51:35) 
-- CODE:
escala=input("digite qual escala de convecao(c=celsius ou f=farenheit):  ")
temp=input(float("digite o valor da temperatura:"))

if(escala.upper()=="C"):
	f=((temp*9)/5)+32
	print (f)
else(escala.upper()=="F"):
	c=9/5*(temp-32)
	print (c)
-- EXECUTION TIME:
0.132657
-- ERROR:
  File "/home/codebench/codes/1643/2445/main.py", line 7
    else(escala.upper()=="F"):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:51:42) 
-- CODE:
escala=input("digite qual escala de convecao(c=celsius ou f=farenheit):  ")
temp=input(float("digite o valor da temperatura:"))

if(escala.upper()=="C"):
	f=((temp*9)/5)+32
	print (f)
else(escala.upper()=="F"):
	c=9/5*(temp-32)
	print (c)
-- ERROR:
File "XXXX", line 7
    else(escala.upper()=="F"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:53:39) 
-- CODE:
escala=input("digite qual escala de convecao(c=celsius ou f=farenheit):  ")
temp=input(float("digite o valor da temperatura:"))

if(escala.upper()=="C"):
	f=((temp*9)/5)+32
	print (round(f,2))
else(escala.upper()=="F"):
	c=9/5*(temp-32)
	print (round(c,2))
-- ERROR:
File "XXXX", line 7
    else(escala.upper()=="F"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:54:57) 
-- CODE:
escala=input("digite qual escala de convecao(c=celsius ou f=farenheit):  ")
temp=input(float("digite o valor da temperatura:"))

if(escala.upper()=="C"):
	f=((temp*9)/5)+32
	print (round(f,2))
else:
	c=9/5*(temp-32)
	print (round(c,2))
-- EXECUTION TIME:
0.169607
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2445/main.py", line 2, in <module>
    temp=input(float("digite o valor da temperatura:"))
ValueError: could not convert string to float: 'digite o valor da temperatura:'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:56:33) 
-- CODE:
escala=input("digite qual escala de convecao(c=celsius ou f=farenheit):  ")
temp=input(float("digite o valor da temperatura:"))

if(escala.upper()=="C"):
	f=(temp*9/5)+32
	print (round(f,2))
else:
	c=9/5*(temp-32)
	print (round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    temp=input(float("digite o valor da temperatura:"))
ValueError: could not convert string to float: 'digite o valor da temperatura:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:58:57) 
-- CODE:
escala=input("digite qual escala de convecao(c=celsius ou f=farenheit):  ")
temp=float(input("digite o valor da temperatura:"))

if(escala.upper()=="C"):
	f=(temp*9/5)+32
	print (round(f,2))
else:
	c=9/5*(temp-32)
	print (round(c,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:03:01) 
-- CODE:
escala=input("digite qual escala de convecao(c=celsius ou f=farenheit):  ")
temp=float(input("digite o valor da temperatura:"))

if(escala.upper()=="C"):
	c=9/5*(temp-32)
	print (round(c,2))
else:
	f=(9/5)*temp+32
	print (round(f,2))
-- OUTPUT:
518.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:04:46) 
-- CODE:
escala=input("digite qual escala de convecao(c=celsius ou f=farenheit):  ")
temp=float(input("digite o valor da temperatura:"))

if(escala.upper()=="C"):
	c=9/5*(temp-32)
	print (round(c,2))
else:
	f=(9/5)*temp+32
	print (round(f,2))
-- OUTPUT:
518.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:06:51) 
-- CODE:
escala=input("digite qual escala de convecao(c=celsius ou f=farenheit):  ")
temp=float(input("digite o valor da temperatura:"))

if(escala.upper()=="C"):
	c=5/9*temp-32
	print (round(c,2))
else:
	f=9/5*temp+32
	print (round(f,2))
-- OUTPUT:
145.78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:13:57) 
-- CODE:
escala=input("digite qual escala de convecao(c=celsius ou f=farenheit):  ")
temp=float(input("digite o valor da temperatura:"))

if(escala.upper()=="F"):
	c=(temp-32)*(5/9)
	print (round(c,2))
else:
	f=9/5*temp+32
	print (round(f,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:17:02) 
-- CODE:
escala=input("digite qual escala de convecao(c=celsius ou f=farenheit):  ")
temp=float(input("digite o valor da temperatura:"))

if(escala.upper()=="F"):
	c=(temp-32)*(5/9)
	print (round(c,2))
else:
	f=(temp/(5/9))+32
	print (round(f,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:17:45) 
-- CODE:
escala=input("digite qual escala de convecao(c=celsius ou f=farenheit):  ")
temp=float(input("digite o valor da temperatura:"))

if(escala.upper()=="F"):
	c=(temp-32)*(5/9)
	print (round(c,2))
else:
	f=(temp/(5/9))+32
	print (round(f,2))
-- EXECUTION TIME:
0.246213
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
